Remove unnecessary test + nit