@@ -1360,7 +1360,7 @@ public class StatefulShardsAvailabilityHealthIndicatorServiceTests extends ESTes
                             unassignedTimeWithinGracePeriod.millis(),
                             false,
                             UnassignedInfo.AllocationStatus.NO_ATTEMPT,
-                            Collections.emptySet(),
+                            failedAllocations > 0 ? Set.of(randomNodeId()) : Collections.emptySet(),
                             null
                         )
                     )
@@ -1558,50 +1558,6 @@ public class StatefulShardsAvailabilityHealthIndicatorServiceTests extends ESTes
                 )
             )
         );
-    }
-
-    public void testRecoveryCancelledPrimaryGoesRedWithPriorFailures() {
-        final var projectId = randomProjectIdOrDefault();
-        final var unassignedTimeWithinGracePeriod = new TimeValue(
-            System.currentTimeMillis() + TimeValue.timeValueHours(1).getMillis(),
-            TimeUnit.MILLISECONDS
-        );
-        final var failedAllocations = randomIntBetween(1, 5);
-        final var indexName = randomIndexName();
-        final var clusterState = createClusterStateWith(
-            projectId,
-            List.of(
-                index(
-                    indexName,
-                    new ShardAllocation(
-                        randomNodeId(),
-                        UNAVAILABLE,
-                        new UnassignedInfo(
-                            UnassignedInfo.Reason.RECOVERY_CANCELLED,
-                            null,
-                            null,
-                            failedAllocations,
-                            unassignedTimeWithinGracePeriod.nanos(),
-                            unassignedTimeWithinGracePeriod.millis(),
-                            false,
-                            UnassignedInfo.AllocationStatus.NO_ATTEMPT,
-                            Set.of(randomNodeId()),
-                            null
-                        )
-                    )
-                )
-            ),
-            List.of()
-        );
-        final var service = createShardsAvailabilityIndicatorService(
-            projectId,
-            Settings.builder().put(ShardsAvailabilityHealthIndicatorService.PRIMARY_INACTIVE_BUFFER_TIME.getKey(), "20s").build(),
-            clusterState,
-            Collections.emptyMap()
-        );
-        final var result = service.calculate(true, HealthInfo.EMPTY_HEALTH_INFO);
-        assertThat(result.status(), equalTo(RED));
-        assertThat(result.symptom(), equalTo("This cluster has 1 unavailable primary shard."));
     }
 
     public void testMixedGraceAndNonGracePrimaryAndReplicaState() {
